Reduce app grid item size a bit to avoid too early overflow

--- a/webadmin/src/theme.scss
+++ b/webadmin/src/theme.scss
@@ -170,7 +170,7 @@ h1, h2, h3 {
 
 .grid-item {
     padding: 10px;
-    min-width: 210px;
+    min-width: 205px;
 
     .col-xs-12 {
         padding-left: 5px;
